[package]
name = "cf_speedtest"
version = "0.6.1"
authors = ["https://github.com/12932"]
repository = "https://github.com/12932/cf_speedtest"
keywords = ["cross-platform", "speedtest", "cli", "speed", "test"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT"
description = "A command-line internet speed test tool"
readme = "README.md"
default-run = "cf_speedtest"

[[bin]]
name = "cf_speedtest"
path = "src/main.rs"
doc = false

[dependencies]
ureq = "3.1.2"
chrono = "0.4.42"
argh = "0.1.13"
rustls = "0.23"
webpki-roots = "1.0.3"
ctrlc = "3.5.1"
phf = { version = "0.13", features = ["macros"] }
socket2 = "0.6.1"
serde = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt"] }

[profile.release]
debug = false
strip = "none"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
